publish version info, reuse package.json

--- a/static/index.mustache
+++ b/static/index.mustache
@@ -35,6 +35,6 @@
   </body>
 </html>
 <!--
-Powered by TasteBin. A pastebin with taste i.e. minimalistic
-https://github.com/andreineculau/tastebin
+Powered by {{& config.pkg.name}}/{{& config.pkg.version}}. {{& config.pkg.description}}
+{{& config.pkg.homepage}}
 -->
