--- a/static/index.mustache
+++ b/static/index.mustache
@@ -30,6 +30,7 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
+    <script src="bower_components/he/he.js"></script>
     {{config.scripts}}
     <script src="bower_components/coffeescript/extras/coffee-script.js"></script>
   </body>
