--- a/static/index.mustache
+++ b/static/index.mustache
@@ -22,7 +22,8 @@
   <body class="hljs">
     <select id="style">{{& config.stylesHtml}}</select>
     <pre id="linenos"><code class="hljs"></code></pre>
-    <pre id="editor" tabindex="0"><code spellcheck="false" class="hljs"></code></pre>
+    <pre id="editor"><code class="hljs"></code><code id="list" class="hljs"></code></pre>
+    <div id="newTaste">{{& config.newTaste}}</div>
 
     <script src="index.coffee" type="text/coffeescript"></script>
 
