use innerText polyfill to ignore non-plaintext content

--- a/static/index.mustache
+++ b/static/index.mustache
@@ -28,6 +28,7 @@
     <script src="index.coffee" type="text/coffeescript"></script>
 
     <script src="https://browser-update.org/update.min.js"></script>
+    <script src="bower_components/innerText-polyfill/innertext.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
