--- a/static/index.mustache
+++ b/static/index.mustache
@@ -15,12 +15,13 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="bower_components/highlightjs/styles/{{config.style}}.css" id="selectedStyle">
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/{{config.hljsStyle}}.css" id="selectedHljsStyle">§
+
     <link rel="stylesheet" href="index.css">
     {{& config.stylesheets}}
   </head>
   <body class="hljs">
-    <select id="style">{{& config.stylesHtml}}</select>
+    <select id="style">{{& config.hljsStylesHtml}}</select>
     <pre id="linenos"><code class="hljs"></code></pre>
     <pre id="editor"><code class="hljs"></code><code id="list" class="hljs"></code></pre>
     <div id="newTaste">{{& config.newTaste}}</div>
