remove erroneous character

--- a/static/index.mustache
+++ b/static/index.mustache
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="bower_components/highlightjs/styles/{{config.hljsStyle}}.css" id="selectedHljsStyle">§
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/{{config.hljsStyle}}.css" id="selectedHljsStyle">
 
     <link rel="stylesheet" href="index.css">
     {{& config.stylesheets}}
