--- a/static/index.mustache
+++ b/static/index.mustache
@@ -21,7 +21,7 @@
     {{& config.stylesheets}}
   </head>
   <body class="hljs">
-    <select id="style">{{& config.hljsStylesHtml}}</select>
+    <select id="hljsStyle">{{& config.hljsStylesHtml}}</select>
     <pre id="linenos"><code class="hljs"></code></pre>
     <pre id="editor"><code class="hljs"></code><code id="list" class="hljs"></code></pre>
     <div id="newTaste">{{& config.newTaste}}</div>
