--- a/static/index.css
+++ b/static/index.css
@@ -6,6 +6,13 @@ body {
 #hljsStyle {
     position: absolute;
     right: 0px;
+    top: 0px;
+    opacity: 0.25;
+    z-index: 100;
+}
+
+#hljsStyle:hover {
+    opacity: 1;
 }
 
 #linenos {
