--- a/static/distraction-free.mustache
+++ b/static/distraction-free.mustache
@@ -20,19 +20,21 @@
     <link rel="stylesheet" href="distraction-free.css">
     {{& config.stylesheets}}
   </head>
-  <body class="hljs">
+  <body>
     <select id="hljsStyle">{{& config.hljsStylesHtml}}</select>
     <select id="theme">{{& config.themesHtml}}</select>
-
-    <pre id="linenos"><code class="hljs"></code></pre>
-    <table id="table">
-      <tr>
-        <td>&nbsp;</td>
-        <td><pre id="editor"><code class="hljs"></code><code id="list" class="hljs"></code></pre></td>
-        <td>&nbsp;</td>
-      </tr>
-    </table>
     <div id="newTaste">{{& config.newTaste}}</div>
+
+    <div id="wrapper" class="hljs">
+      <pre id="linenosWrapper"><code id="linenos" class="hljs"></code></pre>
+      <table id="table">
+        <tr>
+          <td>&nbsp;</td>
+          <td><pre id="editorWrapper"><code id="editor" class="hljs"></code><code id="list" class="hljs"></code></pre></td>
+          <td>&nbsp;</td>
+        </tr>
+      </table>
+    </div>
 
     <script src="index.coffee" type="text/coffeescript"></script>
 
