--- a/static/index.css
+++ b/static/index.css
@@ -8,10 +8,18 @@ body {
     top: 0px;
     opacity: 0.25;
     z-index: 100;
+    min-width: 10em;
+    max-width: 10em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #hljsStyle:hover {
     opacity: 1;
+}
+
+body.editing #hljsStyle {
+    display: none;
 }
 
 #theme {
@@ -20,10 +28,18 @@ body {
     top: 1.5em;
     opacity: 0.25;
     z-index: 100;
+    min-width: 10em;
+    max-width: 10em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #theme:hover {
     opacity: 1;
+}
+
+body.editing #theme {
+    display: none;
 }
 
 #newTaste {
