--- a/static/index.mustache
+++ b/static/index.mustache
@@ -22,6 +22,7 @@
   <body>
     <select id="hljsStyle">{{& config.hljsStylesHtml}}</select>
     <select id="theme">{{& config.themesHtml}}</select>
+    <button id="rawLink" title="View raw"></button>
     <div id="newTaste">{{& config.newTaste}}</div>
 
     <div id="wrapper" class="hljs">
